--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Download Page - SKMods</title>
+  <title>SKMods</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
     :root {
@@ -257,12 +257,12 @@
       </div>
       
       <!-- Telegram Icon -->
-      <a href="https://t.me/skmodsofficial" target="_blank" title="Join Telegram">
+      <a href="https://t.me/sktech_000" target="_blank" title="Join Telegram">
         <i class="fab fa-telegram-plane" style="font-size: 20px;"></i>
       </a>
 
       <!-- Instagram Icon -->
-      <a href="intent://instagram.com/skmods#Intent;package=com.instagram.android;scheme=https;end" title="Instagram">
+      <a href="intent://instagram.com/sahitya_000#Intent;package=com.instagram.android;scheme=https;end" title="Instagram">
         <i class="fab fa-instagram" style="font-size: 20px;"></i>
       </a>
     </div>
