--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
   <div class="container">
     <h1>Get Your Download</h1>
     <p>Please wait while we prepare your file...</p>
-    <div class="countdown" id="countdown">5</div>
+    <div class="countdown" id="countdown">10</div>
 
     <!-- ADVERTISEMENT SECTION -->
     <div id="ad-box">
@@ -282,7 +282,7 @@
       <div id="container-09601e797b7eaf8fd0e3fc4d09c8f32c"></div>
     </div>
 
-    <button class="btn" id="downloadBtn" onclick="window.location.href='https://example.com/your-apk.apk'">Download Now</button>
+    <button class="btn" id="downloadBtn" onclick="window.location.href='https://skmodssofficial.blogspot.com/2024/07/snapchat-max-mod-apk-v2010.html'">Download Now</button>
   </div>
 
   <!-- FOOTER SECTION -->
@@ -292,7 +292,7 @@
 
   <script>
     // Countdown Timer Functionality
-    let seconds = 5;
+    let seconds = 10;
     const countdownEl = document.getElementById("countdown");
     const downloadBtn = document.getElementById("downloadBtn");
 
